Server - Caching rooms + update tests
