# server/ressources/api_spec.yaml
@@ -109,14 +109,7 @@ paths:
         - bearerAuth: []
       responses:
         200:
-          description: User deleted
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
+          $ref: '#/components/responses/APIMessage'
         401:
           $ref: '#/components/responses/UnauthorizedError'
 
@@ -138,10 +131,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
+                $ref: '#/components/schemas/Room'
         400:
           description: Invalid request body
           content:
@@ -168,7 +158,7 @@ paths:
             type: string
       responses:
         200:
-          description: Room found
+          description: Get Room
           content:
             application/json:
               schema:
@@ -231,14 +221,7 @@ paths:
             type: string
       responses:
         200:
-          description: Room deleted
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
+          $ref: '#/components/responses/APIMessage'
         400:
           description: Invalid room id
           content:
@@ -288,14 +271,7 @@ paths:
             type: string
       responses:
         200:
-          description: Room left
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
+          $ref: '#/components/responses/APIMessage'
         400:
           description: Invalid room id
           content:
@@ -322,14 +298,7 @@ paths:
             type: string
       responses:
         200:
-          description: Room joined
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
+          $ref: '#/components/responses/APIMessage'
         400:
           description: Invalid room id
           content:
@@ -391,6 +360,12 @@ components:
       scheme: bearer
       bearerFormat: JWT
   responses:
+    APIMessage:
+      description: A message from the API
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/APIMessage'
     UnauthorizedError:
       description: Access token is missing or invalid
       content:
@@ -478,7 +453,7 @@ components:
                 type: string
               avatar:
                 type: string
-              userId:
+              userIds:
                 type: array
                 items:
                   type: number
@@ -493,6 +468,13 @@ components:
         name:
           type: string
         status:
+          type: string
+    APIMessage:
+      type: object
+      required:
+        - message
+      properties:
+        message:
           type: string
     User:
       type: object
